Update pom.xml: Add JDK 21 `--enable-preview` profile, skip module on JDK 22+